# uibk_parallelization_24

./: .gitignore
assignments/02/: mandelbrot_mpi.cpp  mandelbrot_seq.cpp  readme.md  run.slurm
code_students/: CMakeLists.txt  run.slurm
code_students/apps/: CMakeLists.txt  main_full_code_parallel.cpp
code_students/build_release/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
code_students/build_release/apps/: Makefile  cmake_install.cmake
code_students/build_release/src/: Makefile  cmake_install.cmake
code_students/build_release/src/IO/: Makefile  cmake_install.cmake
code_students/build_release/src/setup/: Makefile  cmake_install.cmake
code_students/build_release/src/solver/: Makefile  cmake_install.cmake
code_students/build_release/src/util/: Makefile  cmake_install.cmake
code_students/src/: CMakeLists.txt
code_students/src/setup/: finite_volume_solver.cpp  mpi_handler.cpp  physics.cpp
code_students/src/solver/: Riemann_solver_HLL.cpp  limiter.cpp  time_integrator.cpp
